--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.98",
-	"appid": "wxe708e0b41801009e",
+	"appid": "wx04c7e42ce952e9af",
 	"projectname": "WxaBlog",
 	"isGameTourist": false,
 	"condition": {
